2019-10-16  Jakub Jelinek  <jakub@redhat.com>

	* tree-ssa-strlen.c (maybe_invalidate): Use
	HOST_WIDE_INT_PRINT_UNSIGNED instead of "%zu".

2019-10-16  Andrew Burgess  <andrew.burgess@embecosm.com>
	    Jim Wilson  <jimw@sifive.com>

	* config/riscv/riscv.h (REG_CLASS_CONTENTS): Add argument passing
	regs to SIBCALL_REGS.
	* config/riscv/riscv.c (riscv_regno_to_class): Change argument
	passing regs to SIBCALL_REGS.

2019-10-16  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/83821
	* tree-ssa-strlen.c (maybe_invalidate): Add argument.  Consider
	the length of a string when available.
	(handle_builtin_memset) Add argument.
	(handle_store, strlen_check_and_optimize_call): Same.
	(check_and_optimize_stmt): Same.  Pass it to callees.

2019-10-16  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/91996
	* tree-ssa-strlen.c (maybe_warn_pointless_strcmp): Improve location
	information.
	(compare_nonzero_chars): Add an overload.
	(count_nonzero_bytes): Add an argument.  Call overload above.
	Handle non-constant lengths in some range.
	(handle_store): Add an argument.
	(check_and_optimize_stmt): Pass an argument to handle_store.

2019-10-16  Richard Earnshaw  <rearnsha@arm.com>

	* config/arm/arm.c (neon_valid_immediate): Clear bytes before use.

2019-10-16  Mihailo Stojanovic  <mistojanovic@wavecomp.com>

	* config/mips/mips.c (mips_expand_builtin_insn): Force the
	operands which correspond to the same input-output register to
	have the same pseudo assigned to them.

2019-10-16  Ilya Leoshkevich  <iii@linux.ibm.com>

	* cfgrtl.c (find_partition_fixes): Remove bbs_in_cold_partition.

2019-10-16  Wilco Dijkstra  <wdijkstr@arm.com>

	* config/aarch64/aarch64.c (aarch64_classify_symbol):
	Apply reasonable limit to symbol offsets.

2019-10-16  Richard Biener  <rguenther@suse.de>

	* tree-vect-loop.c (vect_valid_reduction_input_p): Remove.
	(vect_is_simple_reduction): Delay checking to
	vectorizable_reduction and relax the checking.